# WireSentinel-SSE

./: Cargo.toml  README.md
.github/workflows/: ci.yml
browser-isolation/: Cargo.toml
browser-isolation/src/: engine.rs  lib.rs
browser-isolation/tests/: browser_isolation.rs
casb/: Cargo.toml
casb/src/: engine.rs  lib.rs  provider.rs
casb/src/providers/: generic.rs  mod.rs  saas.rs
casb/tests/: casb.rs
controller/src/: dto.rs  lib.rs
controller/tests/: controller.rs
datalake/: Cargo.toml
datalake/src/: lake.rs  lib.rs  query.rs
datalake/tests/: datalake.rs
dlp/: Cargo.toml
dlp/src/: detection.rs  engine.rs  lib.rs
dlp/tests/: dlp.rs
docs/: architecture.md
risk-engine/: Cargo.toml
risk-engine/src/: engine.rs  lib.rs
risk-engine/tests/: risk_engine.rs
sdk/: Cargo.toml
sdk/src/: lib.rs  manifest.rs  plugin.rs
sdk/tests/: sdk.rs
siem/: Cargo.toml
siem/src/: exporter.rs  lib.rs  manager.rs
siem/tests/: siem.rs
sse-core/: Cargo.toml
sse-core/src/: error.rs  lib.rs
sse-core/tests/: core.rs
swg/: Cargo.toml
swg/src/: gateway.rs  lib.rs
swg/tests/: swg.rs
threat-protection/: Cargo.toml
threat-protection/src/: engine.rs  lib.rs
threat-protection/tests/: threat_protection.rs
ueba/: Cargo.toml
ueba/src/: engine.rs  lib.rs
ueba/tests/: ueba.rs
