[workspace]
resolver = "2"
members = [
    "sse-core",
    "swg",
    "casb",
    "dlp",
    "browser-isolation",
    "threat-protection",
    "ueba",
    "risk-engine",
    "datalake",
    "siem",
    "sdk",
    "controller",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
authors = ["WireSentinel Contributors"]
repository = "https://github.com/WireSentinel/WireSentinel-SSE"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
uuid = { version = "1", features = ["v4", "serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
parking_lot = "0.12"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
thiserror = "2"
regex = "1"

shared-types = { path = "../WireSentinel/shared-types" }
sse-core = { path = "sse-core" }
swg = { path = "swg" }
casb = { path = "casb" }
dlp = { path = "dlp" }
browser-isolation = { path = "browser-isolation" }
threat-protection = { path = "threat-protection" }
ueba = { path = "ueba" }
risk-engine = { path = "risk-engine" }
datalake = { path = "datalake" }
siem = { path = "siem" }
sdk = { path = "sdk" }
controller = { path = "controller" }
