[package]
name = "casb"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
sse-core = { workspace = true }
shared-types = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
parking_lot = { workspace = true }
